creusot/tests/should_fail/prusti/index_invalid.stderr
error[creusot]: std::vec::Vec<T>@'old cannot be moved to 'curr since it isn't copy
                required by function call
 --> index_invalid.rs:5:22
  |
5 | #[ensures(*result == old(*v)@[0])]
  |                      ^^^^^^^

error: aborting due to previous error

